classDiagram

    class AbstractInterface~ResourceRead, ResourceQuery, ResourceCreate, ResourceUpdate~ {
        <<Interface>>
        ... Find(...)
        ResourceRead Create(ResourceCreate data)
        ... Read(...)
        ... Update(...)
        ... Delete(...)
    }

    class UsersInterface {
        <<Interface>>
    }

    class IssuesInterface {
        <<Interface>>
    }

    class CommentsInterface {
        <<Interface>>
    }

    AbstractInterface <|-- UsersInterface
    AbstractInterface <|-- IssuesInterface
    AbstractInterface <|-- CommentsInterface

    style AbstractInterface fill:yellow